@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 #! /usr/bin/env python
 
 # $Id$
@@ -119,6 +120,20 @@ Test short underline.
                 ====
         <paragraph>
             Test short underline.
+"""],
+[u"""\
+à with combining varia
+======================
+
+Do not count combining chars in title column width.
+""",
+u"""\
+<document source="test data">
+    <section ids="a-with-combining-varia" names="a\u0300\ with\ combining\ varia">
+        <title>
+            à with combining varia
+        <paragraph>
+            Do not count combining chars in title column width.
 """],
 ["""\
 =====
